<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_map_main">MapMainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    
    <string name="app_name">NeedSReal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="connection">Connection</string>
    <string name="registration">Registration</string>
    <string name="welcome_needsreal">Welcome to needSreal !</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_bis">Confirmation</string>
    <string name="tos">Term Of Service</string>
    <string name="add_visibility_object">Add Visibility Settings</string>
    <string name="validate">Validate</string>
    
    <string name="previous_search">Previous search</string>
    <string name="need">Needs</string>
    <string name="demand">Demands</string>
    <string name="offer">Offers</string>
    <string name="nearest_people">See around you</string>
    
    
    
    
    <string name="profile_tab1">My Profile</string>
    <string name="nohobby">No passion defined yet</string>
    <string name="disconnect">Disconnect</string>
    
    <string name="send">Send</string>
    
    <string name="profile_tab2">Visibility</string>
    <string name="modify">Modify</string>
    <string name="profile_tab3">Settings</string>

    <!-- Static Categories -->
    <string name="cat_other">Other</string>
    <string name="cat_other_desc">No category</string>
    <string name="cat_sports">Sports</string>
    <string name="cat_sports_desc">All info about sports</string>
    <string name="cat_music">Music</string>
    <string name="cat_music_desc">Music description</string>

    <!-- Default Visibilities -->
    <string name="vis_default">Default</string>
    <string name="vis_full">Full Visible</string>
    <string name="vis_invisible">Invisible</string>
</resources>



