<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connection_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConnectionActivity" >

    <ImageView
        android:id="@+id/connection_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_menu" />

    <EditText
        android:id="@+id/connection_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/connection_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/connection_connection_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection" />

</LinearLayout>
