<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/block_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:layout_weight="3"
    android:animateLayoutChanges="true"
    tools:context="SearchBlockFragment" >

    <ScrollView
        android:id="@+id/linearL1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light" >

        

        <LinearLayout
            android:id="@+id/linearL2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_search"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ListView
                android:id="@+id/previousSearchList"
                android:layout_width="fill_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:id="@+id/linearL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/categorySearch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/need" />

                <Button
                    android:id="@+id/categorySearch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/demand" />

                <Button
                    android:id="@+id/categorySearch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/offer" />
            </LinearLayout>
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearest_people"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <ListView
                android:id="@+id/nearestList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            
        </LinearLayout>
    </ScrollView>

</FrameLayout>